--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "generate": "^0.14.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.3.0"
   },
