--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ag-grid-community": "^34.3.1",
+    "ag-grid-react": "^34.3.1",
     "axios": "^1.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
