--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
     "ag-grid-community": "^34.3.1",
     "ag-grid-react": "^34.3.1",
     "axios": "^1.13.1",
+    "jspdf": "^3.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
